#############
# libniftyled plugins Makefile.am
# v0.4 - Daniel Hiepler <daniel@niftylight.de>


include $(top_srcdir)/Makefile.global.am


my_cflags = \
	$(niftyled_CFLAGS) \
	$(DEBUG_CFLAGS) \
	$(COMMON_CFLAGS_N)

my_libflags = \
	$(niftyled_LIBS) \
	$(COMMON_LIBS_N)

my_ldflags = \
	$(COMMON_LDFLAGS_N)


check_PROGRAMS =

# test-target
#TESTS = $(check_PROGRAMS)
#AM_TESTS_ENVIRONMENT = "$(top_srcdir)/tests/tests.env;"
#EXTRA_DIST = tests.env
